fix legibility a bit...

--- a/static/st/main.css
+++ b/static/st/main.css
@@ -36,7 +36,7 @@ html {
 * {
     margin:0;
     box-sizing: border-box;
-    padding: 0;
+    /* padding: 0; */
 }
 
 body {
